--- a/baidu-front-end-demo1-day12-15/style/chats.css
+++ b/baidu-front-end-demo1-day12-15/style/chats.css
@@ -41,12 +41,19 @@
 /* list */
 
 .main .chats .chat-list .list {
-    overflow: scroll;
     position: absolute;
     top: 72px;
     bottom: 0;
     left: 0;
     right: 0;
+    
+    overflow: scroll;
+    /* IE10/Edge 去除滚动条 */
+    -ms-overflow-style: none;
+    /* firefox 64 隐藏滚动条 */
+    scrollbar-color: transparent transparent;
+    /* firefox 64 去除滚动条 */
+    scrollbar-width: none;
 }
 
 /* 隐藏滚动条 */
@@ -55,7 +62,6 @@
 }
 
 .main .chats .chat-list .list .card {
-    box-sizing: border-box;
     padding: 15px 30px;
     width: 100%;
     border-bottom: 1px solid #e3e6ea;
