--- a/baidu-front-end-demo1-day12-15/style/deafult.css
+++ b/baidu-front-end-demo1-day12-15/style/deafult.css
@@ -1,9 +1,15 @@
+* {
+    /* border-box模式会使width算上padding与border的宽度 */
+    box-sizing: border-box;
+}
+
 html,
 body {
     margin: 0;
     padding: 0;
     width: auto;
     height: 100vh;
+    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
 }
 
 .bold {
