--- a/baidu-front-end-demo1-day12-15/style/header.css
+++ b/baidu-front-end-demo1-day12-15/style/header.css
@@ -15,7 +15,6 @@
     left: 0;
     height: 80px;
 
-    box-sizing: border-box;
     padding: 0 30px;
     border-bottom: 1px solid #e3e6ea;
 }
@@ -36,4 +35,35 @@
     right: 30px;
     top: 40px;
     transform: translateY(-50%);
+}
+
+/* 头像 */
+
+.main header .profile img {
+    display: block;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
+
+.main header .profile .status {
+    position: absolute;
+    top: 30px;
+    left: 30px;
+    width: 20px;
+    height: 20px;
+    background: #fff;
+    border-radius: 50%;
+}
+
+/* 利用伪元素画个圆圈 */
+.main header .profile .status::before {
+    content: "";
+    position: absolute;
+    top: 3px;
+    bottom: 3px;
+    right: 3px;
+    left: 3px;
+    border: 3px solid #369a64;
+    border-radius: 50%;
 }
