--- a/baidu-front-end-demo1-day12-15/style/header.css
+++ b/baidu-front-end-demo1-day12-15/style/header.css
@@ -20,8 +20,11 @@
 }
 
 .main header h1 {
-    margin: 0;
     font-size: 24px;
+    font-weight: normal;
+    /* 首字母大写 */
+    text-transform: capitalize;
+    margin: 0;
     /* 垂直居中 */
     position: absolute;
     top: 40px;
@@ -44,6 +47,9 @@
     width: 50px;
     height: 50px;
     border-radius: 50%;
+
+    float: left;
+    margin-right: 20px;
 }
 
 .main header .profile .status {
@@ -66,4 +72,8 @@
     left: 3px;
     border: 3px solid #369a64;
     border-radius: 50%;
+}
+
+.main header .profile .span:nth-child(1) {
+    
 }
