--- a/baidu-front-end-demo1-day12-15/style/menu.css
+++ b/baidu-front-end-demo1-day12-15/style/menu.css
@@ -1,6 +1,6 @@
 /* 左侧栏 */
 
-.menu {
+nav.menu {
     background: #1d2531;
     position: fixed;
     top: 0;
@@ -8,11 +8,22 @@
     left: 0;
     width: 100px;
     height: 100vh;
-}
 
+    /* 以防当浏览器垂直高度过小 */
+    overflow: scroll;
+    /* IE10/Edge 去除滚动条 */
+    -ms-overflow-style: none;
+    /* firefox 64 隐藏滚动条 */
+    scrollbar-color: transparent transparent;
+    /* firefox 64 去除滚动条 */
+    scrollbar-width: none;
+}
+.menu::-webkit-scrollbar {
+    width: 0;
+}
 /* 左侧栏按钮 */
 
-.menu button {
+nav.menu button {
     /* background: transparent; */
     border: 0;
     margin: 0;
@@ -21,15 +32,15 @@
     outline: none;
 }
 
-.menu button:hover {
+nav.menu button:hover {
     cursor: pointer;
 }
 
-.menu .menu-buttons {
+nav.menu .menu-buttons {
     padding: 20px;
 }
 
-.menu .menu-buttons button {
+nav.menu .menu-buttons button {
     width: 60px;
     height: 60px;
     border-radius: 50%;
@@ -38,25 +49,25 @@
     position: relative;
 }
 
-.menu .menu-buttons button:last-child {
+nav.menu .menu-buttons button:last-child {
     margin-bottom: 0;
 }
 
 /* 按钮背景 */
 
-.menu .menu-buttons button.blue {
+nav.menu .menu-buttons button.blue {
     background-image: linear-gradient(#2ea1f8, #1992eb);
 }
 
-.menu .menu-buttons button.purple {
+nav.menu .menu-buttons button.purple {
     background-image: linear-gradient(#9c8ee3, #7b59df);
 }
 
-.menu .menu-buttons button.orange {
+nav.menu .menu-buttons button.orange {
     background-image: linear-gradient(#f35338, #cc280b);
 }
 
-.menu .menu-buttons button.more {
+nav.menu .menu-buttons button.more {
     border: 3px solid #9fa9ba;
     background: transparent;
     opacity: .125;
@@ -64,7 +75,7 @@
 
 /* 按钮icon */
 
-.menu .menu-buttons button::after {
+nav.menu .menu-buttons button::after {
     content: "";
     position: absolute;
     top: 0px;
@@ -75,22 +86,22 @@
     background-position: center;
 }
 
-.menu .menu-buttons button.blue::after {
+nav.menu .menu-buttons button.blue::after {
     background-image: url("../imgs/icons/item1.png");
     /* 由于该icon的视觉位置偏移，单独调整位置 */
     top: 2px;
     left: 1px;
 }
 
-.menu .menu-buttons button.purple::after {
+nav.menu .menu-buttons button.purple::after {
     background-image: url("../imgs/icons/item2.png");
 }
 
-.menu .menu-buttons button.orange::after {
+nav.menu .menu-buttons button.orange::after {
     background-image: url("../imgs/icons/item3.png");
 }
 
-.menu .menu-buttons button.more:after {
+nav.menu .menu-buttons button.more:after {
     /* 减掉border的位置 */
     transform: translate(-3px, -3px);
     background-image: url("../imgs/icons/add-icon.png");
@@ -98,21 +109,24 @@
 
 /* 左侧栏底下 */
 
-.menu .bottom-menu-buttons {
-    position: absolute;
+nav.menu .bottom-menu-buttons {
+    position: fixed;
     font-size: 0;
-    left: 25px;
-    bottom: 20px;
+    padding: 20px 25px;
+    left: 0;
+    bottom: 0;
+    /* 盖住当浏览器垂直高度过小时，上面的icon挤到下面来的问题 */
+    background: #1d2531;
 }
 
-.menu .bottom-menu-buttons .grid {
+nav.menu .bottom-menu-buttons .grid {
     width: 16px;
     height: 16px;
     display: inline-block;
     background: url(../imgs/icons/grid.png);
 }
 
-.menu .bottom-menu-buttons .settings {
+nav.menu .bottom-menu-buttons .settings {
     width: 16px;
     height: 16px;
     margin-left: 15px;
@@ -120,145 +134,9 @@
     background: url(../imgs/icons/settings.png);
 }
 
-/* 第二菜单栏 */
-
-.secondary {
-    width: 250px;
-    height: 100vh;
-
-    position: fixed;
-    top: 0;
-    left: 100px;
-
-    padding: 30px;
-    background: #222c3c;
-
-    font-size: 14px;
-
-    overflow: scroll;
-    /* IE10/Edge 去除滚动条 */
-    -ms-overflow-style: none;
-    /* firefox 64 隐藏滚动条 */
-    scrollbar-color: transparent transparent;
-    /* firefox 64 去除滚动条 */
-    scrollbar-width: none;
-}
-
-/* Chrome 隐藏滚动条 */
-.secondary::-webkit-scrollbar {
-    width: 0;
-}
-
-.secondary .classification {
-    font-size: 12px;
-    text-transform: uppercase;
-    color: #475364;
-    margin-bottom: 25px;
-}
-
-/* 这里的settings按钮其实应该使用js生成才可以实现点击跳转 */
-/* 否则需要在html里每一个分类都添加一次settings按钮 */
-.secondary .classification.settings::after {
-    content: "";
-    display: block;
-    width: 16px;
-    height: 16px;
-    float: right;
-    cursor: pointer;
-    background: url(../imgs/icons/settings.png);
-}
-
-.secondary .item {
-    text-transform: capitalize;
-    margin-bottom: 20px;
-    position: relative;
-}
-
-.secondary .divider {
-    height: 1px;
-    width: 100%;
-    background: #293446;
-    margin: 25px 0;
-}
-
-/* part2 icon */
-
-.secondary .part2 .item::before {
-    content: "";
-    float: left;
-    display: block;
-    transform: translateY(-2px);
-    width: 20px;
-    height: 20px;
-    margin-right: 14px;
-    background-repeat: no-repeat;
-    background-position: center;
-}
-
-.secondary .part2 .books.item::before {
-    background-image: url(../imgs/icons/book-of-wisdom.png);
-}
-
-.secondary .part2 .tutorials.item::before {
-    background-image: url(../imgs/icons/video-camera.png);
-}
-
-.secondary .part2 .stocks.item::before {
-    background-image: url(../imgs/icons/painting.png);
-}
-
-.secondary .part2 .infographics.item::before {
-    background-image: url(../imgs/icons/chart.png);
-}
-
-
-/* monthly goals */
-
-.secondary .bottom {
-    /* 使用fixed才可以在浏览器竖向高度不够
-       需要滚动第二菜单栏时不会移动 */
-    position: fixed;
-    bottom: 0;
-    left: 100px;
-
-    /* 占据一定的空间，避免垂直高度不够时上面的菜单挤到下面 */
-    width: 250px;
-    padding: 30px;
-
-    font-size: 12px;
-    color: #fff;
-    background: #222c3c;
-}
-
-.secondary .bottom .money {
-    float: right;
-}
-
-.secondary .progress-bar {
-    width: 100%;
-    height: 4px;
-    border-radius: 4px;
-    margin-top: 12px;
-
-    background: #2d3848;
-
-    position: relative;
-}
-
-.secondary .progress-bar::after {
-    content: "";
-    width: 18.125%;
-
-    height: 4px;
-    border-radius: 4px;
-    background-image: linear-gradient(to left, #9c8ee3, #7b59df);
-
-    position: absolute;
-}
-
 /* 被选中的项目 */
 
-.menu button.selected::before {
+nav.menu button.selected::before {
     content: "";
     width: 4px;
     height: 4px;
@@ -269,21 +147,4 @@
     position: absolute;
     top: 28px;
     left: -21px;
-}
-
-.secondary .item.selected {
-    color: #fff;
-}
-
-.secondary .item.selected::before {
-    content: "";
-    width: 4px;
-    height: 4px;
-    border-radius: 50%;
-    background: #2399f1;
-    box-shadow: 0 0 8px #2399f1;
-
-    position: absolute;
-    top: 6px;
-    left: -31px;
 }
