--- a/baidu-front-end-demo1-day12-15/style/secordary.css
+++ b/baidu-front-end-demo1-day12-15/style/secordary.css
@@ -112,6 +112,11 @@
     float: right;
 }
 
+
+.secondary .bottom .bold {
+    font-weight: 500;
+}
+
 .secondary .progress-bar {
     width: 100%;
     height: 4px;
