--- a/baidu-front-end-demo1-day12-15/style/deafult.css
+++ b/baidu-front-end-demo1-day12-15/style/deafult.css
@@ -12,8 +12,9 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
 }
 
-.bold {
-    font-weight: bold;
+a {
+    color: inherit;
+    text-decoration: none;
 }
 
 .reminding::after {
@@ -55,12 +56,6 @@ body {
 
 .secondary {
     color: #b7c0cd;
-}
-
-.menu a,
-.secondary a {
-    color: inherit;
-    text-decoration: none;
 }
 
 /* 主窗口 */
