--- a/baidu-front-end-demo1-day12-15/style/simulate-js.css
+++ b/baidu-front-end-demo1-day12-15/style/simulate-js.css
@@ -15,3 +15,7 @@
     font-weight: normal;
     color: #b7c0cd;
 }
+
+.main .chats .chat-list .list .card .info-container.reminding::after {
+    content: "4";
+}
