--- a/layout/FlexGallery/flex-gallery.html
+++ b/layout/FlexGallery/flex-gallery.html
@@ -4,11 +4,13 @@
 <head>
     <meta chaset="utf-8">
     <title>My Gallery</title>
-    <!-- 用于实现点击图片查看大图的效果 -->
-    <!-- 但好像预览不了 -->
+    <!-- 用于实现点击图片可以查看大图的效果 -->
     <link rel="stylesheet" href="https://cdn.bootcss.com/magnific-popup.js/1.1.0/magnific-popup.min.css">
     <link rel="stylesheet" href="css/style.css">
-
+    <!-- 注意顺序，jquery库要在magnific-popup之前 -->
+    <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdn.bootcss.com/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
@@ -17,35 +19,35 @@
             <h1>My Gallery</h1>
             <div class="border"></div>
             <div class="gallery">
-                <a herf="imgs/1.jpg" class="image">
+                <a href="imgs/1.jpg" class="image">
                     <img src="imgs/1.jpg" alt="">
                 </a>
 
-                <a herf="imgs/2.jpg" class="image">
+                <a href="imgs/2.jpg" class="image">
                     <img src="imgs/2.jpg" alt="">
                 </a>
 
-                <a herf="imgs/3.jpg" class="image">
+                <a href="imgs/3.jpg" class="image">
                     <img src="imgs/3.jpg" alt="">
                 </a>
 
-                <a herf="imgs/4.jpg" class="image">
+                <a href="imgs/4.jpg" class="image">
                     <img src="imgs/4.jpg" alt="">
                 </a>
 
-                <a herf="imgs/5.jpg" class="image">
+                <a href="imgs/5.jpg" class="image">
                     <img src="imgs/5.jpg" alt="">
                 </a>
 
-                <a herf="imgs/6.jpg" class="image">
+                <a href="imgs/6.jpg" class="image">
                     <img src="imgs/6.jpg" alt="">
                 </a>
 
-                <a herf="imgs/7.jpg" class="image">
+                <a href="imgs/7.jpg" class="image">
                     <img src="imgs/7.jpg" alt="">
                 </a>
 
-                <a herf="imgs/8.jpg" class="image">
+                <a href="imgs/8.jpg" class="image">
                     <img src="imgs/8.jpg" alt="">
                 </a>
 
