--- a/layout/BaiduFE-day12-15/index.html
+++ b/layout/BaiduFE-day12-15/index.html
@@ -35,62 +35,63 @@
 
   <!-- secondary -->
   <aside class="secondary">
-    <div class="part1">
-      <div class="classification settings">MENU</div>
-      <a href="#">
-        <div class="item overview">Overview</div>
-      </a>
-      <a href="#">
-        <div class="item sales reminding">Sales</div>
-      </a>
-      <a href="#">
-        <div class="item staff">Your Staff</div>
-      </a>
-      <a href="#">
-        <div class="item a&t">Analytics & Targeting</div>
-      </a>
-      <a href="#">
-        <div class="item new">What's New</div>
-      </a>
+    <div class="main-part">
+      <div class="part1">
+        <div class="classification settings">MENU</div>
+        <a href="#">
+          <div class="item overview">Overview</div>
+        </a>
+        <a href="#">
+          <div class="item sales reminding">Sales</div>
+        </a>
+        <a href="#">
+          <div class="item staff">Your Staff</div>
+        </a>
+        <a href="#">
+          <div class="item a&t">Analytics & Targeting</div>
+        </a>
+        <a href="#">
+          <div class="item new">What's New</div>
+        </a>
+      </div>
+
+      <div class="divider"></div>
+
+      <div class="part2">
+        <div class="classification settings">YOUR PRODUCTS</div>
+        <a href="#">
+          <div class="item books">Books</div>
+        </a>
+        <a href="#">
+          <div class="item tutorials">Tutorials</div>
+        </a>
+        <a href="#">
+          <div class="item stocks">Stocks</div>
+        </a>
+        <a href="#">
+          <div class="item infographics">Infographics</div>
+        </a>
+      </div>
+
+      <div class="divider"></div>
+
+      <div class="part3">
+        <div class="classification settings">DASHBOARD</div>
+        <a href="#">
+          <div class="item messages reminding selected">Messages</div>
+        </a>
+        <a href="#">
+          <div class="item connections">Connections</div>
+          <div class="item intergrations warning">Intergrations</div>
+        </a>
+        <a href="#">
+          <div class="item account-settings">Account Settings</div>
+        </a>
+        <a href="#">
+          <div class="item app-settings">App Settings</div>
+        </a>
+      </div>
     </div>
-
-    <div class="divider"></div>
-
-    <div class="part2">
-      <div class="classification settings">YOUR PRODUCTS</div>
-      <a href="#">
-        <div class="item books">Books</div>
-      </a>
-      <a href="#">
-        <div class="item tutorials">Tutorials</div>
-      </a>
-      <a href="#">
-        <div class="item stocks">Stocks</div>
-      </a>
-      <a href="#">
-        <div class="item infographics">Infographics</div>
-      </a>
-    </div>
-
-    <div class="divider"></div>
-
-    <div class="part3">
-      <div class="classification settings">DASHBOARD</div>
-      <a href="#">
-        <div class="item messages reminding selected">Messages</div>
-      </a>
-      <a href="#">
-        <div class="item connections">Connections</div>
-        <div class="item intergrations warning">Intergrations</div>
-      </a>
-      <a href="#">
-        <div class="item account-settings">Account Settings</div>
-      </a>
-      <a href="#">
-        <div class="item app-settings">App Settings</div>
-      </a>
-    </div>
-
     <div class="bottom">
       <span class="bold">Monthly Goals</span>
       <div class="money">
@@ -146,155 +147,180 @@
             </div>
           </div>
 
-        <div class="card">
-          <div class="wrapper">
-            <div class="avatar">
-              <img src="imgs/avatars/avatar_02.png" alt="avatar" />
+          <div class="card">
+            <div class="wrapper">
+              <div class="avatar">
+                <img src="imgs/avatars/avatar_02.png" alt="avatar" />
+              </div>
+              <div class="description">
+                <span class="name">Sora</span>
+                <span class="company">Adobe</span>
+              </div>
+              <div class="time">8m</div>
             </div>
-            <div class="description">
-              <span class="name">Sora</span>
-              <span class="company">Adobe</span>
-            </div>
-            <div class="time">8m</div>
-          </div>
-          <div class="info-container">
-            <div class="info">
-              I shared this on my fb wall a few months back, and I thought I'd share it here again because it's such a
-              great...
-            </div>
-          </div>
-        </div>
-        <div class="card">
-          <div class="wrapper">
-            <div class="avatar">
-              <img src="imgs/avatars/avatar_03.png" alt="avatar" />
-            </div>
-            <div class="description">
-              <span class="name">Blue Poison</span>
-              <span class="company">Facebook</span>
-            </div>
-            <div class="time">Yesterday</div>
-          </div>
-          <div class="info-container">
-            <div class="info">
-              If there is anyone who needs an invitation please add yourself in the comments of this post!
+            <div class="info-container">
+              <div class="info">
+                I shared this on my fb wall a few months back, and I thought I'd share it here again because it's such a
+                great...
+              </div>
             </div>
           </div>
-        </div>
-        <div class="card">
-          <div class="wrapper">
-            <div class="avatar">
-              <img src="imgs/avatars/avatar_04.png" alt="avatar" />
+          <div class="card">
+            <div class="wrapper">
+              <div class="avatar">
+                <img src="imgs/avatars/avatar_03.png" alt="avatar" />
+              </div>
+              <div class="description">
+                <span class="name">Blue Poison</span>
+                <span class="company">Facebook</span>
+              </div>
+              <div class="time">Yesterday</div>
             </div>
-            <div class="description">
-              <span class="name">Myrrh</span>
-              <span class="company">Yahoo</span>
-            </div>
-            <div class="time">Yesterday</div>
-          </div>
-          <div class="info-container">
-            <div class="info">
-              BruteDC is a peer-to-peer movie+tv series sharing and downloading platform which works on intranet
-              inside...
-            </div>
-          </div>
-        </div>
-        <div class="card">
-          <div class="wrapper">
-            <div class="avatar">
-              <img src="imgs/avatars/avatar_05.png" alt="avatar" />
-            </div>
-            <div class="description">
-              <span class="name">Slience</span>
-              <span class="company">Snapchat</span>
-            </div>
-            <div class="time">13 Jun</div>
-          </div>
-          <div class="info-container">
-            <div class="info">
-              Yes, p2p traffic is often filtered (QoSed). Although i do use BT on O2 wires, and in good days dl speed...
+            <div class="info-container">
+              <div class="info">
+                If there is anyone who needs an invitation please add yourself in the comments of this post!
+              </div>
             </div>
           </div>
-        </div>
-        <div class="card">
-          <div class="wrapper">
-            <div class="avatar">
-              <img src="imgs/avatars/avatar_06.png" alt="avatar" />
+          <div class="card">
+            <div class="wrapper">
+              <div class="avatar">
+                <img src="imgs/avatars/avatar_04.png" alt="avatar" />
+              </div>
+              <div class="description">
+                <span class="name">Myrrh</span>
+                <span class="company">Yahoo</span>
+              </div>
+              <div class="time">Yesterday</div>
             </div>
-            <div class="description">
-              <span class="name">Истина</span>
-              <span class="company">Twitter</span>
-            </div>
-            <div class="time">12 Jun</div>
-          </div>
-          <div class="info-container">
-            <div class="info">
-              Yes, it's O2: 'internet extreme', which is no longer offered.
-            </div>
-          </div>
-        </div>
-        <div class="card">
-          <div class="wrapper">
-            <div class="avatar">
-              <img src="imgs/avatars/avatar_07.png" alt="avatar" />
-            </div>
-            <div class="description">
-              <span class="name">amiya</span>
-              <span class="company">A Team</span>
-            </div>
-            <div class="time">9 Jun</div>
-          </div>
-          <div class="info-container">
-            <div class="info">
-              I change my service from this 4Mb plan to their much cheaper 8Mb plan, my speed will dramatically
-              decrease.
+            <div class="info-container">
+              <div class="info">
+                BruteDC is a peer-to-peer movie+tv series sharing and downloading platform which works on intranet
+                inside...
+              </div>
             </div>
           </div>
-        </div>
-        <div class="card">
-          <div class="wrapper">
-            <div class="avatar">
-              <img src="imgs/avatars/avatar_08.png" alt="avatar" />
+          <div class="card">
+            <div class="wrapper">
+              <div class="avatar">
+                <img src="imgs/avatars/avatar_05.png" alt="avatar" />
+              </div>
+              <div class="description">
+                <span class="name">Slience</span>
+                <span class="company">Snapchat</span>
+              </div>
+              <div class="time">13 Jun</div>
             </div>
-            <div class="description">
-              <span class="name">Firewatch</span>
-              <span class="company">Tencent</span>
-            </div>
-            <div class="time">2 Jun</div>
-          </div>
-          <div class="info-container">
-            <div class="info">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-              dolore magna aliqua.
-            </div>
-          </div>
-        </div>
-        <div class="card">
-          <div class="wrapper">
-            <div class="avatar">
-              <img src="imgs/avatars/avatar_09.png" alt="avatar" />
-            </div>
-            <div class="description">
-              <span class="name">Texas</span>
-              <span class="company">Alibaba</span>
-            </div>
-            <div class="time">1 Jun</div>
-          </div>
-          <div class="info-container">
-            <div class="info">
-              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-              consequat.
+            <div class="info-container">
+              <div class="info">
+                Yes, p2p traffic is often filtered (QoSed). Although i do use BT on O2 wires, and in good days dl
+                speed...
+              </div>
             </div>
           </div>
-        </div>
+          <div class="card">
+            <div class="wrapper">
+              <div class="avatar">
+                <img src="imgs/avatars/avatar_06.png" alt="avatar" />
+              </div>
+              <div class="description">
+                <span class="name">Истина</span>
+                <span class="company">Twitter</span>
+              </div>
+              <div class="time">12 Jun</div>
+            </div>
+            <div class="info-container">
+              <div class="info">
+                Yes, it's O2: 'internet extreme', which is no longer offered.
+              </div>
+            </div>
+          </div>
+          <div class="card">
+            <div class="wrapper">
+              <div class="avatar">
+                <img src="imgs/avatars/avatar_07.png" alt="avatar" />
+              </div>
+              <div class="description">
+                <span class="name">amiya</span>
+                <span class="company">A Team</span>
+              </div>
+              <div class="time">9 Jun</div>
+            </div>
+            <div class="info-container">
+              <div class="info">
+                I change my service from this 4Mb plan to their much cheaper 8Mb plan, my speed will dramatically
+                decrease.
+              </div>
+            </div>
+          </div>
+          <div class="card">
+            <div class="wrapper">
+              <div class="avatar">
+                <img src="imgs/avatars/avatar_08.png" alt="avatar" />
+              </div>
+              <div class="description">
+                <span class="name">Firewatch</span>
+                <span class="company">Tencent</span>
+              </div>
+              <div class="time">2 Jun</div>
+            </div>
+            <div class="info-container">
+              <div class="info">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua.
+              </div>
+            </div>
+          </div>
+          <div class="card">
+            <div class="wrapper">
+              <div class="avatar">
+                <img src="imgs/avatars/avatar_09.png" alt="avatar" />
+              </div>
+              <div class="description">
+                <span class="name">Texas</span>
+                <span class="company">Alibaba</span>
+              </div>
+              <div class="time">1 Jun</div>
+            </div>
+            <div class="info-container">
+              <div class="info">
+                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                consequat.
+              </div>
+            </div>
+          </div>
 
+        </div>
+      </div>
+
+      <!-- open-chat -->
+      <div class="open-chat">
+        <div class="chat-header">
+          <span class="current-chat-buddy">Manticore</span>
+          <div class="buddy-button buttons">
+            <a>
+              <div class="add-buddy button"></div>
+            </a>
+            <a>
+              <div class="buddy-details button"></div>
+            </a>
+            <a>
+              <div class="remote-buddy button"></div>
+            </a>
+
+            <span class="page-num">1 of 28</span>
+            <div class="turn-page-button buttons">
+              <a>
+                <div class="page-up button"></div>
+              </a>
+              <a>
+                <div class="page-down button"></div>
+              </a>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
-
-    <!-- open-chat -->
-    <div class="open-chat">
-    </div>
-  </div>
   </div>
 </body>
 
