--- a/layout/BaiduFE-day12-15/style/open-chat.css
+++ b/layout/BaiduFE-day12-15/style/open-chat.css
@@ -1,8 +1,126 @@
 /* open chat */
 
-.main .chats .open-chat {
-    flex: 2;
-    
+.main .chat-window .open-chat {
+    flex: 3;
+    min-width: 450px;
+    display: flex;
+    flex-direction: column;
+}
+
+/* chat-header */
+
+.main .chat-window .chat-header {
+    width: 100%;
+    height: 70px;
+    padding: 0 20px;
+    border-bottom: 1px solid #e3e6ea;
+
+    display: flex;
+    align-items: center;
+}
+
+.main .chat-window .chat-header h1 {
+    font-size: 18px;
+    font-weight: 500;
+    margin: 0;
+    flex: auto;
+}
+
+.main .chat-window .chat-header h1::after {
+    content: "";
+    /* 如果没有设置inline-block，则会继承inline */
+    /* 从而没有显示（因为没有content） */
+    display: inline-block;
+    width: 8px;
+    height: 8px;
+    border-radius: 50%;
+    background: #1bb934;
+
+    margin-left: 10px;
+    position: relative;
+    top: -2px;
+}
+
+/* btn */
+
+.main .chat-window .chat-header .btns {
+    /* a或者div都存在匿名文本，如果不处理则会导致元素多出来4px高度 */
+    /* 使用 font-size:0 或者flex都可以解决此问题 */
+    /* font-size: 0; */
+    display: flex;
+    border-radius: 4px;
+    border: 1px solid #ced0da;
+}
+
+.main .chat-window .chat-header .btns a {
+    /* 消除匿名盒子 */
+    line-height: 0;
+}
+
+.main .chat-window .chat-header .btn {
+    width: 35px;
+    height: 30px;
+    display: inline-block;
+    background: linear-gradient(#ffffff, #f2f4f7);
+    border-left: 1px solid #ced0da;
+}
+
+.main .chat-window .chat-header a:first-child .btn {
+    border: none;
+}
+
+.main .chat-window .chat-header .divider {
+    width: 1px;
+    height: 32px;
+    background: #e3e6ea;
+    margin: 0 24px;
+}
+
+.main .chat-window .chat-header .page-num {
+    font-weight: 500;
+    margin-right: 15px;
+}
+
+/* btn icon */
+
+.main .chat-window .chat-header .buddy-btn a:nth-child(1) .btn {
+    background: url(../imgs/icons/user-icon.png) center no-repeat;
+}
+
+.main .chat-window .chat-header .buddy-btn a:nth-child(2) .btn {
+    background: url(../imgs/icons/upload-icon.png) center no-repeat;
+}
+
+.main .chat-window .chat-header .buddy-btn a:nth-child(3) .btn {
+    background: url(../imgs/icons/trash-icon.png) center no-repeat;
+}
+
+.main .chat-window .chat-header .turn-page-btn .btn div {
+    width: 0;
+    height: 0;
+    /* 画三角形的trick */
+    border-top: 5px solid transparent;
+    border-bottom: 5px solid transparent;
+    /* 居中 */
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.main .chat-window .chat-header .turn-page-btn a:nth-child(1) .btn div {
+    border-right: 6px solid #ced0da;
+}
+
+.main .chat-window .chat-header .turn-page-btn a:nth-child(2) .btn div {
+    border-left: 6px solid #ced0da;
+}
+
+/* chat-content */
+
+.main .chat-window .open-chat .chat-content {
+    flex: 1;
+
     overflow: scroll;
     /* IE10/Edge 去除滚动条 */
     -ms-overflow-style: none;
@@ -11,8 +129,183 @@
     /* firefox 64 去除滚动条 */
     scrollbar-width: none;
 }
+
 /* 隐藏滚动条 */
-.main .chats .open-chat::-webkit-scrollbar {
+.main .chat-window .open-chat .chat-content::-webkit-scrollbar {
     width: 0;
     height: 0;
+}
+
+/* msg-content */
+
+.main .chat-window .open-chat .chat-content .msg-block {
+    display: flex;
+    margin: 25px 50px 0 25px;
+}
+
+.main .chat-window .open-chat .chat-content .avatar {
+    flex: none;
+    margin-right: 20px;
+}
+
+.main .chat-window .open-chat .chat-content .msg h1 {
+    font-size: 16px;
+    font-weight: 500;
+    margin: 0 10px 0 0;
+    display: inline;
+}
+
+.main .chat-window .open-chat .chat-content .msg time {
+    font-weight: 500;
+    color: #7f8fa4;
+}
+
+.main .chat-window .open-chat .chat-content .msg p {
+    margin: 10px 0;
+}
+
+/* divider */
+
+.main .chat-window .open-chat .chat-content .divider {
+    width: 100%;
+    margin: 25px 0;
+    display: flex;
+    align-items: center;
+}
+
+.main .chat-window .open-chat .chat-content .divider .text {
+    padding: 0 20px;
+    color: #7f8fa4;
+}
+
+/* 利用伪元素画线 */
+.main .chat-window .open-chat .chat-content .divider::before,
+.main .chat-window .open-chat .chat-content .divider::after {
+    content: "";
+    height: 1px;
+    /* 自动伸缩填充空白 */
+    flex: auto;
+    background: #d9dde3;
+}
+
+.main .chat-window .open-chat .chat-content .divider.new .text {
+    color: #2399f1;
+}
+
+.main .chat-window .open-chat .chat-content .divider.new::before,
+.main .chat-window .open-chat .chat-content .divider.new::after {
+    background: #a7d6f9;
+}
+
+/* photo */
+
+.main .chat-window .open-chat .chat-content .photos a {
+    width: 156px;
+    height: 100px;
+    margin: 10px 0 0 10px;
+
+    border-radius: 4px;
+    display: inline-block;
+
+    position: relative;
+}
+
+.main .chat-window .open-chat .chat-content .photos a:first-child {
+    margin-left: 0;
+}
+
+/* 伪元素暗色蒙版 */
+.main .chat-window .open-chat .chat-content .photos a::before {
+    content: "";
+    display: block;
+    width: 156px;
+    height: 100px;
+    border-radius: 4px;
+    background: #234;
+
+    position: absolute;
+    bottom: 0;
+    /* hover动画效果 */
+    opacity: 0;
+    transition: .5s;
+}
+
+.main .chat-window .open-chat .chat-content .photos a:hover::before {
+    opacity: .7;
+}
+
+/* 伪元素画上圆与放大镜icon */
+.main .chat-window .open-chat .chat-content .photos a::after {
+    content: "";
+    display: block;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+
+    /* 越前面的background越后绘制（即icon在底色上面） */
+    background: url(../imgs/icons/open-icon.png), rgba(250, 250, 250, .3);
+    background-repeat: no-repeat;
+    background-position: center;
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    /* hover动画效果 */
+    opacity: 0;
+    transition: .5s;
+}
+
+.main .chat-window .open-chat .chat-content .photos a:hover::after {
+    opacity: .8;
+}
+
+.main .chat-window .open-chat .chat-content .photos .photo {
+    width: 156px;
+    height: 100px;
+}
+
+.main .chat-window .open-chat .chat-content .photos a:nth-child(1) .photo {
+    background: url(../imgs/photos/Photo_01.png);
+    font-size: 0;
+}
+
+.main .chat-window .open-chat .chat-content .photos a:nth-child(2) .photo {
+    background: url(../imgs/photos/Photo_02.png);
+}
+
+/* msg-input */
+
+.main .chat-window .open-chat .msg-input {
+    height: 96px;
+    padding: 0 30px;
+    display: flex;
+}
+
+.main .chat-window .open-chat .msg-input button {
+    width: 54px;
+    height: 54px;
+    /* marign auto仅在flex布局有效 */
+    margin: auto;
+
+    border: 1px solid #ced0da;
+    border-radius: 4px 0 0 4px;
+    background: linear-gradient(#ffffff, #f2f4f7);
+    outline: none;
+    cursor: pointer;
+
+    font-size: 28px;
+    color: #9fa9ba;
+}
+
+.main .chat-window .open-chat .msg-input input {
+    height: 54px;
+    flex: 1;
+    margin: auto;
+    padding: 0 16px;
+    outline: none;
+    border: 1px solid #dfe3e9;
+    border-left: none;
+    border-radius: 0 4px 4px 0;
 }
