--- a/layout/BaiduFE-day12-15/style/simulate-js.css
+++ b/layout/BaiduFE-day12-15/style/simulate-js.css
@@ -16,6 +16,6 @@
     color: #b7c0cd;
 }
 
-.main .chats .chat-list .list .card .info-container.reminding::after {
+.main .chat-window .chat-list .list .card .info-container.reminding::after {
     content: "4";
 }
