--- a/layout/BaiduFE-day12-15/style/deafult.css
+++ b/layout/BaiduFE-day12-15/style/deafult.css
@@ -65,6 +65,10 @@ a {
     color: #585d68;
 }
 
+.main input {
+    color: #585d68;
+}
+
 .main .avatar {
     width: 50px;
     height: 50px;
@@ -79,7 +83,7 @@ a {
 
 /* 聊天框架 */
 
-.main .chats {
+.main .chat-window {
     position: absolute;
     top: 80px;
     right: 0;
