--- a/layout/BaiduFE-day12-15/style/secordary.css
+++ b/layout/BaiduFE-day12-15/style/secordary.css
@@ -3,10 +3,6 @@
 .secondary {
     width: 250px;
     height: 100vh;
-    padding: 30px;
-    /* 将padding-top交给main-part */
-    /* 使得main-part滚动不会被padding-top遮挡 */
-    padding-top: 0;
     background: #222c3c;
     font-size: 14px;
 
@@ -19,7 +15,7 @@
 }
 
 .secondary .main-part {
-    padding-top: 30px;
+    padding: 30px;
 
     overflow: scroll;
     /* IE10/Edge 去除滚动条 */
@@ -104,11 +100,13 @@
 /* monthly goals */
 
 .secondary .bottom {
-    margin-top: 30px;
+    padding: 30px;
 
     font-size: 12px;
     color: #fff;
     background: #222c3c;
+    /* 上阴影，提示可以滚动 */
+    box-shadow: 0 -24px 20px -20px rgba(30, 30, 30, .4);
 }
 
 .secondary .bottom .money {
@@ -154,7 +152,6 @@
     border-radius: 50%;
     background: #2399f1;
     box-shadow: 0 0 8px #2399f1;
-
     position: absolute;
     top: 6px;
     left: -31px;
